# qa-guru-lesson-14

./: pyproject.toml
